# data-dreamer

./: README.md  pyproject.toml
data_dreamer/: data.py
data_dreamer/models/: __init__.py  autoencoder.py  base.py
tests/models/: test_autoencoder.py  test_mlp.py
