[tool.poetry]
name = "data-dreamer"
version = "0.1.0"
description = ""
authors = ["Cem Alpturk <cem.alpturk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
datasets = "^2.18.0"
jax = "^0.4.25"
jaxlib = "^0.4.25"
optax = "^0.2.1"
equinox = "^0.11.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
